{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 17,
  "lineage": "908c0e05-3c82-76ca-d130-01c00a11bbc3",
  "resources": [
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_eip",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_eip",
      "name": "secondary_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_instance",
      "name": "panorama",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_instance",
      "name": "secondary_panorama",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "management_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:847357768075:internet-gateway/igw-025a154868ea21767",
            "id": "igw-025a154868ea21767",
            "owner_id": "847357768075",
            "tags": {
              "Name": "Reference Architecture Management IGW"
            },
            "vpc_id": "vpc-0f13dec46857ee480"
          },
          "dependencies": [
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-06e5a23fbdcac4444",
            "mac_address": "02:4b:f2:55:97:89",
            "private_dns_name": "ip-10-255-0-4.us-west-2.compute.internal",
            "private_ip": "10.255.0.4",
            "private_ips": [
              "10.255.0.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00b794c24ff8b1119"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e04325b8a130e98f",
            "tags": {
              "Name": "Reference Architecture Panorama-primary"
            }
          },
          "dependencies": [
            "aws_security_group.management",
            "data.aws_availability_zones.available",
            "module.panorama.aws_subnet.management_subnet_primary",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "secondary_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-01a59bf4066a33553",
            "mac_address": "06:81:21:06:60:b3",
            "private_dns_name": "ip-10-255-1-4.us-west-2.compute.internal",
            "private_ip": "10.255.1.4",
            "private_ips": [
              "10.255.1.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00b794c24ff8b1119"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a73ad3dda0adc06",
            "tags": {
              "Name": "Reference Architecture Panorama-secondary"
            }
          },
          "dependencies": [
            "aws_security_group.management",
            "data.aws_availability_zones.available",
            "module.panorama.aws_subnet.management_subnet_secondary",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_route",
      "name": "in_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-025a154868ea21767",
            "id": "r-rtb-08878e86603ee73641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08878e86603ee7364",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.panorama.aws_internet_gateway.management_igw",
            "module.panorama.aws_route_table.management_igw",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "management_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08878e86603ee7364",
            "owner_id": "847357768075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Reference Architecture Management IGW"
            },
            "vpc_id": "vpc-0f13dec46857ee480"
          },
          "dependencies": [
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "management_igw_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041c72f5ebd411896",
            "route_table_id": "rtb-08878e86603ee7364",
            "subnet_id": "subnet-0e04325b8a130e98f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.panorama.aws_route_table.management_igw",
            "module.panorama.aws_subnet.management_subnet_primary",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "management_igw_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06332d79dca254ea3",
            "route_table_id": "rtb-08878e86603ee7364",
            "subnet_id": "subnet-06a73ad3dda0adc06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.panorama.aws_route_table.management_igw",
            "module.panorama.aws_subnet.management_subnet_secondary",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:847357768075:security-group/sg-00b794c24ff8b1119",
            "description": "Inbound filtering for Panorama",
            "egress": [],
            "id": "sg-00b794c24ff8b1119",
            "ingress": [],
            "name": "Reference Architecture Panorama",
            "name_prefix": null,
            "owner_id": "847357768075",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f13dec46857ee480"
          },
          "dependencies": [
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-out-mgmt-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3154029333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b794c24ff8b1119",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.management",
            "module.panorama.aws_vpc.management-vpc"
          ]
        },
        {
          "index_key": "https-from-on-prem",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2227550271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b794c24ff8b1119",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.management",
            "module.panorama.aws_vpc.management-vpc"
          ]
        },
        {
          "index_key": "ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.255.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4127631026",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b794c24ff8b1119",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.management",
            "module.panorama.aws_vpc.management-vpc"
          ]
        },
        {
          "index_key": "ssh-from-on-prem",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1949425721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b794c24ff8b1119",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.management",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management_subnet_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:847357768075:subnet/subnet-0e04325b8a130e98f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.255.0.0/24",
            "id": "subnet-0e04325b8a130e98f",
            "map_public_ip_on_launch": false,
            "owner_id": "847357768075",
            "tags": {
              "Name": "Reference Architecture Management - us-west-2a"
            },
            "vpc_id": "vpc-0f13dec46857ee480"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management_subnet_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:847357768075:subnet/subnet-06a73ad3dda0adc06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.255.1.0/24",
            "id": "subnet-06a73ad3dda0adc06",
            "map_public_ip_on_launch": false,
            "owner_id": "847357768075",
            "tags": {
              "Name": "Reference Architecture Management - us-west-2b"
            },
            "vpc_id": "vpc-0f13dec46857ee480"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.panorama.aws_vpc.management-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.panorama",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "management-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:847357768075:vpc/vpc-0f13dec46857ee480",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.255.0.0/16",
            "default_network_acl_id": "acl-01284e53d690caeee",
            "default_route_table_id": "rtb-0862480a88bd8d591",
            "default_security_group_id": "sg-0032865e842de2eda",
            "dhcp_options_id": "dopt-858b5dfd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f13dec46857ee480",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0862480a88bd8d591",
            "owner_id": "847357768075",
            "tags": {
              "Name": "Reference Architecture Management VPC"
            }
          }
        }
      ]
    }
  ]
}